--- a/index.html
+++ b/index.html
@@ -250,8 +250,7 @@
 
       <section id="contact" class=" bg-white rounded-top-left rounded-top-right">
          <div class="contact-content container d-flex justify-content-center pb-4">
-            <form id="form" class="pb-4 d-flex flex-column col-10 col-md-6 needs-validation" method="POST" novalidate
-               netlify>
+            <form id="form" class="pb-4 d-flex flex-column col-10 col-md-6 needs-validation">
                <h2 class="text-sweet-brown pt-3 pb-3 pb-md-5">Napisz do nas</h2>
 
                <div class="d-flex flex-column position-relative mb-2">
