--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
          </div>
       </section>
 
-      <section id="contact" class=" bg-white rounded-top-left rounded-top-right">
+      <!-- <section id="contact" class=" bg-white rounded-top-left rounded-top-right">
          <div class="contact-content container d-flex justify-content-center pb-4">
             <form id="form" class="pb-4 d-flex flex-column col-10 col-md-6 needs-validation">
                <h2 class="text-sweet-brown pt-3 pb-3 pb-md-5">Napisz do nas</h2>
@@ -328,7 +328,7 @@
       </section>
 
       <section id="documents" class="container">
-         <!-- RODO -->
+
          <button id="btnRodo" type="button" class="btn btn-outline-dark my-4 d-flex w-100 justify-content-center"
             data-bs-toggle="collapse" data-bs-target="#rodo" aria-expanded="false" aria-controls="rodo">
             <span>RODO</span>
@@ -424,7 +424,7 @@
                Telefon: 604532202
             </div>
          </div>
-         <!-- REGULAMIN -->
+
          <button id="btnRegulamin" type="button" class="btn btn-outline-dark my-4 d-flex w-100 justify-content-center"
             data-bs-toggle="collapse" data-bs-target="#regulamin" aria-expanded="false" aria-controls="rodo">
             <span>REGULAMIN</span>
@@ -622,7 +622,7 @@
                przed ważnymi wydarzeniami takimi jak wyjazd na urlop czy rodzinna uroczystość.
             </div>
          </div>
-      </section>
+      </section> -->
    </main>
 
    <footer>
